--- a/styles/ToDoList.module.scss
+++ b/styles/ToDoList.module.scss
@@ -86,10 +86,14 @@
 }
 
 .task {
-    width: 80%;
+    max-width: 55%;
+    max-height: 37px;
     border-radius: 10px;
-    padding: 5px 20px;
-    overflow: hidden;
+    padding: 5px 20px 5px 10px;
+    position: absolute;
+    margin: 12px 70px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .closedButton {
@@ -113,7 +117,7 @@
         height: 34px;
         top: 27px;
     }
-    
+
     &:focus {
         background: #e63947a4;
         outline: 2px solid #57CC99;
